--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        
     <div class="upper">
         <div class="me">
-            <img src="C:\htmlcss\resume_page\profile7.jpg" alt="A profile pciture of Andrew Gugger."
+            <img src="C:\htmlcss\resume_page\guggera.github.io\profile7.jpg" alt="A profile pciture of Andrew Gugger."
             width=300 id="profile">
             <a href="mailto: agugger@udel.edu"><img src="C:\htmlcss\resume_page\mail_icon.png" alt="Mail icon image that links to Andrew Gugger's email."
             width=50 id="mailicon"></a>
