--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="my-header">
             <div class="space">
                 <div class="not-active">
-                    <a href="index_resume.html">HOME</a>
+                    <a href="index.html">HOME</a>
                 </div>
                 <a class="active" href="about.html">ABOUT</a>
                 <div class="not-active">
