--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
     <div class ="hi">
         <div class="pic">
-            <img src="C:\htmlcss\resume_page\marathon.jpg"
+            <img src="marathon.JPG"
              alt="A photo of Andrew Gugger running the Philadelphia Marathon" width=400 id="marathon"/>
         </div>
 
