--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="script.js"></script>
 
     <div>
-        <meta name="viewport" content="width=device-width, inital-scale1.0">
+        <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <meta name="description" content="Andrew Gugger's personal website">
         <meta name="keyword" content="Andrew Gugger, resume, rowing, greenwich, University of Delaware">
         <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
