--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="script.js"></script>
 
     <div>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <meta name="description" content="Andrew Gugger's personal website">
         <meta name="keyword" content="Andrew Gugger, resume, rowing, greenwich, University of Delaware">
@@ -51,7 +52,7 @@
         <div class="animation">
             <div class="list">
                 <strong class="proficient">Proficient in:</strong>
-                <a href="" class="typewrite" data-period="2000" data-type='[ "Python", "HTML/CSS", "SQL", "Excel", "R", "German", "Photoshop", "MySQL", "Motorcycling" ]'>
+                <a href="" class="typewrite" data-period="2000" data-type='[ "Python", "SQL", "HTML/CSS", "Excel", "R", "Photoshop", "MySQL", "Adobe Animate", "German","Motorcycling" ]'>
                 <span class="wrap"></span>
                 </a>
             </div>
