Update for different sized screens

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <div class="my-header">
+        <div class="my-header" id="upup">
             <div class="space">
                 <div class="not-active">
                     <a href="index.html">HOME</a>
@@ -48,13 +48,15 @@
 
         <div class="smile">
             <h2>
-            Hello :)
+                Hello :)
             </h2>
+            <div id="biog">
                 <p>
                     Thanks for visiting my About page. I was born in Switzerland but grew up in the Northeast where I started rowing in highschool and it became 
                     my passion. The valuable lessons I have learned from rowing have helped me to succeed in my endeavours both in and outside of the classroom. 
                 
                 </p>
+            </div>
         </div>
     </div>
     <br/>
