--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, inital-scale1.0">
         <meta name="description" content="Andrew Gugger's personal website">
         <meta name="keyword" content="Andrew Gugger, resume, rowing, greenwich, University of Delaware">
+        <meta name="google-site-verification" content="r9g6r2oWrgl4FlAF0dcAOmduiXIL7HfL2aExopRPxU4">
         <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </div>
     <title>
