Added about sentences

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
             <div class="space">
                 <div class="not-active">
                     <a href="index.html">HOME</a>
+                    <a href="resume.html">RESUME</a>
                 </div>
                 <a class="active" href="about.html">ABOUT</a>
                 <div class="not-active">
@@ -64,8 +65,13 @@
     <div class="class-work">
         <p>
             Rowing has given me a work ethic and a multitude of life lessons that has helped me in every discipline I have pursued. It taught me the true power
-            of hard work, dedication, and patience. I struggled a lot during my first semester at university; I was unsure of what to major in, I hadn't performed
-            as well as I would have liked in rowing, and I was missing many of my friends from home. I decided that I needed a win. Having only ever ran approximately
+            of hard work, dedication, and patience. I started rowing in high school for Greenwich Crew in Connecticut where I worked my way up to eventually become
+            varsity captain my senior year and qualified to race at the Youth National Championships in the Men's Ltwt 4+ which was being held in Sarasota, Florida.
+            I was then recruited to row for the<strong><a target="_blank" href="http://delawarecrew.com/"> University of Delawares Lightweight Men's Crew</a></strong> team.
+            <br/>
+            <br/>
+            Like many first year university students, I struggled; I was unsure of what to major in, I hadn't performed as well as I would have liked in rowing, 
+            and I was missing many of my friends from home. I decided that I needed a win. Having only ever ran approximately
             8 miles before, I impuslively signed up to run the Philadelphia marathon with only 4 weeks to train. I ran everyday while simultaneously attending 4:30 AM
             crew practice and balancing a busy course load. I worked my way up to running 20 miles the weekend before the race and I ended up completing it in 3:42. 
             This accomplishment reinforced in me the importance of goal setting and dedication and how rewarding it can be.
