content edits adn additions

--- a/resume.html
+++ b/resume.html
@@ -45,15 +45,22 @@
 
 
 
-
+    <!--
     <div class="res" id="resu">
             <p>
-                I am very passionate about technology and the potential applications it has to better people's lives. 
+                "If there is one thing I've learned in my years on this planet, it's that the happiest and most fulfilled
+                people I've known are those who devoted themselves to something bigger and more profound than merely their
+                own self interest."
     
             </p>
+            <p>
+                - John Glenn
+            </p>
     </div>
-
+    -->
     <br/>
+    <br/>
+
     
     <!--
 
