--- a/about.html
+++ b/about.html
@@ -66,24 +66,26 @@
         <p>
             Rowing has given me a work ethic and a multitude of life lessons that has helped me in every discipline I have pursued. It taught me the true power
             of hard work, dedication, and patience. I started rowing in high school for Greenwich Crew in Connecticut where I worked my way up to eventually become
-            varsity captain my senior year and qualified to race at the Youth National Championships in the Men's Ltwt 4+ which was being held in Sarasota, Florida.
-            I was then recruited to row for the<strong><a target="_blank" href="http://delawarecrew.com/"> University of Delawares Lightweight Men's Crew</a></strong> team.
+            varsity captain in my senior year. I qualified to race in the Men's Ltwt 4+ at the <strong><a target="_blank" href="https://greenwichfreepress.com/schools/greenwich-crew-advances-to-nationals-dominates-northeast-regionals-87496/"> Youth National Championships</a></strong> 
+            where we placed 3rd in the B-Final.
+            I was fortunate to be recruited to row for the<strong><a target="_blank" href="http://delawarecrew.com/"> University of Delawares Lightweight Men's Crew</a></strong> team.
             <br/>
             <br/>
-            Like many first year university students, I struggled; I was unsure of what to major in, I hadn't performed as well as I would have liked in rowing, 
-            and I was missing many of my friends from home. I decided that I needed a win. Having only ever ran approximately
-            8 miles before, I impuslively signed up to run the Philadelphia marathon with only 4 weeks to train. I ran everyday while simultaneously attending 4:30 AM
-            crew practice and balancing a busy course load. I worked my way up to running 20 miles the weekend before the race and I ended up completing it in 3:42. 
-            This accomplishment reinforced in me the importance of goal setting and dedication and how rewarding it can be.
+            Like many first year university students, I struggled; I was unsure of what to pursue as a major, I hadn't performed as well as I would have liked in rowing, 
+            and I was missing many of my friends from home. I knew that I needed to shift my focus from feeling defeated to setting myself a challenge that I could successfully
+            accomplish. Having only ever run approximately
+            8 miles before, I signed up to run the Philadelphia marathon with only 4 weeks to train. I ran everyday while simultaneously attending 4:30 AM
+            crew practice and balancing a busy course load. My determination paid off and I completed the race in 3:42. 
+            This accomplishment reinforced in me the importance of goal-setting and dedication and how rewarding it can be.
             <br/>
             <br/>
-            After taking the spring semester of my freshmen year off I traveled to my home country of Switzerland where I had the amazing opportunity to stay 
-            with my family where I could work on a construction site and race at regattas. I met some amazing people on both the construction sites and my rowing 
+            After taking the spring semester of my freshmen year off I traveled to my birth country of Switzerland to stay with my family where I had the amazing 
+            opportunity to work on construction sites and compete at regattas. I met some amazing people on both the construction sites and my rowing 
             team, <strong><a target="_blank" href="https://www.ruderclub-schaffhausen.ch/"> Ruder Club Schaffhausen</a></strong>. My coach, Ueli, was one of the 
-            most inspirational and the wisest human being I have ever met and getting coached by him was a truly humbling experience. I am truly grateful and
-            honored to have called him my coach and I only could have met him through rowing. His elite coaching reinvigorated my passion for rowing and I ended 
-            up returning the following summer to once again race with them. From working on construction sites to racing at many high-profile regattas such as the 
-            Swiss Championships, I was also able to connect with my country on a much greater level. 
+            most inspirational and the wisest human beings I have ever met and getting coached by him was a truly humbling experience. I am grateful and
+            honored to have called him my coach and I only could have met him through rowing. His elite coaching reinvigorated my passion for rowing and I was excited 
+            to return to Switzerland the following summer to once again race with them. From working on construction sites to racing at many high-profile regattas such 
+            as the Swiss Championships, I was also able to connect with my country on a much deeper level. 
         </p>
     </div>
 
