--- a/resume.html
+++ b/resume.html
@@ -135,18 +135,21 @@
             I was initially supposed to begin my internship at the end of May but there was a delayed start due to HR complications brought on by COVID. 
             Nevertheless, over the course of the 7 weeks that I worked for TMHCC remotely I received a ton of not only industry knowledge, but also gained valuable 
             insight into the function of IT in a big company. During my internship, I worked on a major policy and claims administration system replacement 
-            project for the Public Risk Group. <span class="read-more-target">I contributed by providing quality assurance for system configurations made in the Infinity database configuration 
-            manager and documenting modifications to help sync these across test and production environments. This required me to learn the structure of the
-            database whilst searching meticulously for errors and then have the ability to communicate them to my mentors and co-workers.
+            project for the Public Risk Group. <span class="read-more-target">I contributed by providing quality assurance for system configurations made in the
+            Infinity Database Configuration Manager and documenting modifications to help sync these across test and production environments. 
+            This required me to learn the structure of the
+            database whilst conducting QA and then communicating my findings to my mentors and co-workers. I also had the opportunity to sit in 
+            on presentations given 
+            by vendors that license could-based-technology that allows companies to build scalable web applications without any programming knowledge. These meetings gave
+            me invaluable insight into how IT will be building applications throughout all industries in the future.
             <br/> <br/>
             
             Another project I contributed to gave me the opportunity to develop a tool that allowed TMHCC to test their rating engines for calculating premium.
             For each line of business, the rating engines would calculate the premium based on many different factors. As I grew my familiarity with how 
             the rating engine worked, my mentor provided me with the opportunity to work more
-            independently on the project. The tests for each engine required small tweaks to the tool that I built so I was tasked with creating
-            documentation that detailed every step I took to build the tool as well as the modifications needed whenever working on a different rating engine. There 
-            were many unforeseen obstacles that were thrown my way when working on this project, however, it gave me the opportunity to refine my workflow optimization
-            and problem-solving abilities. </span>
+            independently on the project. I created documentation that detailed how the tool worked as well as the modifications needed when working on a different rating
+            engine. There were many unforeseen obstacles that were thrown my way when working on this project, however, it gave me the opportunity to refine my workflow
+            optimization and problem-solving abilities. </span>
         </p>
         <label for="post-1" class="read-more-trigger"></label>
         
@@ -207,7 +210,7 @@
             The NEST was an idea that the MIS Department Chair came up with to try and build a sense of community/belonging for incoming MIS majors since classes
             were moved online due to COVID. One of my professors reached out to me over the summer with the opportunity of being a "NEST Leader" where myself and
             one other NEST Leader would be in charge providing social, community, and academic support to a group of about 10 freshmen MIS majors. I came up with 
-            ideas for activies to get students engaged and socializing with one another, provided tutoring as well as mentoring as the navigated their first semester
+            ideas for activies to get students engaged and socializing with one another, provided tutoring as well as mentoring as they navigated their first semester
             of university.
         </p>
         <br/>
@@ -219,6 +222,9 @@
         </p>
         <ul>
             <li>Covers the design and implementation of enterprise databases in the business environment with emphasis on ER Modeling, SQL and MySQL.</li>
+            <li>Understanding how to structure data using normalization guidelines.</li>
+            <li>Understand how to implement a designe using a top RDBMS.</li>
+            <li>Underestand how to query a database using MySQL.</li>
         </ul>
 
         <br/>
