--- a/resume.html
+++ b/resume.html
@@ -222,9 +222,9 @@
         </p>
         <ul>
             <li>Covers the design and implementation of enterprise databases in the business environment with emphasis on ER Modeling, SQL and MySQL.</li>
-            <li>Understanding how to structure data using normalization guidelines.</li>
-            <li>Understand how to implement a designe using a top RDBMS.</li>
-            <li>Underestand how to query a database using MySQL.</li>
+            <li>How to structure data using normalization guidelines.</li>
+            <li>How to implement a designe using a top RDBMS.</li>
+            <li>How to query a database using MySQL.</li>
         </ul>
 
         <br/>
