--- a/resume.html
+++ b/resume.html
@@ -197,7 +197,7 @@
     <div class="class-work">
         <span class="titles">
             <h2>
-                Education & Classwork
+                Classwork & Extracurriculars
             </h2>
         </span>
         <p>
@@ -214,6 +214,33 @@
             of university.
         </p>
         <br/>
+
+        <p>
+            <span class="job">
+                <strong>MISY350 </strong>- Business Application Development</a> 
+                <br/>
+            </span>
+        </p>
+        <ul>
+            <li>Covers concepts related to client-side design and server-side development. </li>
+            <li>Design dynamic websites that connect to a relational database.</li>
+        </ul>
+
+        <br/>
+
+        <p>
+            <span class="job">
+                <strong>MISY465 </strong>- Introduction to Cybersecurity</a> 
+                <br/>
+            </span>
+        </p>
+        <ul>
+            <li>Computer and network security and covers the foundation security policies and methods to provide confidentiality, integrity, and availability, as well as cryptography, auditing, and user security.</li>
+            <li>Topics are reinforced with hands-on exercises run in a virtual machine environment.</li>
+        </ul>
+
+        <br/>
+
         <p>
             <span class="job">
                 <strong>MISY330 </strong>- Database Design and Implementation</a> 
@@ -223,7 +250,7 @@
         <ul>
             <li>Covers the design and implementation of enterprise databases in the business environment with emphasis on ER Modeling, SQL and MySQL.</li>
             <li>How to structure data using normalization guidelines.</li>
-            <li>How to implement a designe using a top RDBMS.</li>
+            <li>How to implement a design using a top RDBMS.</li>
             <li>How to query a database using MySQL.</li>
         </ul>
 
