--- a/resume.html
+++ b/resume.html
@@ -135,7 +135,7 @@
             I was initially supposed to begin my internship at the end of May but there was a delayed start due to HR complications brought on by COVID. 
             Nevertheless, over the course of the 7 weeks that I worked for TMHCC remotely I received a ton of not only industry knowledge, but also gained valuable 
             insight into the function of IT in a big company. During my internship, I worked on a major policy and claims administration system replacement 
-            project for the Public Risk Group. <span class="read-more-target">I contributed by providing quality assurance for system configurations made in the
+            project for the Public Risk Group. <span class="read-more-target">I contributed by providing quality assurance for system configurations made in their
             Infinity Database Configuration Manager and documenting modifications to help sync these across test and production environments. 
             This required me to learn the structure of the
             database whilst conducting QA and then communicating my findings to my mentors and co-workers. I also had the opportunity to sit in 
@@ -148,7 +148,7 @@
             For each line of business, the rating engines would calculate the premium based on many different factors. As I grew my familiarity with how 
             the rating engine worked, my mentor provided me with the opportunity to work more
             independently on the project. I created documentation that detailed how the tool worked as well as the modifications needed when working on a different rating
-            engine. There were many unforeseen obstacles that were thrown my way when working on this project, however, it gave me the opportunity to refine my workflow
+            engine. There were many unforeseen obstacles that were thrown my way when working on this project, however, it granted me the opportunity to refine my workflow
             optimization and problem-solving abilities. </span>
         </p>
         <label for="post-1" class="read-more-trigger"></label>
@@ -158,7 +158,7 @@
             <span class="job">
                 <strong>Co-Founder </strong>- <a target="_blank" href="https://www.newyorkrelic.com/"> New York Relic</a> <br/>
             </span>
-            <span class="date"> March 2020 - Present</span>
+            <span class="date"> March - August 2020</span>
         </p>
         <p>
             On March 1, 2020, a new bag waste reduction law took effect in New York State - where over 23 billion plastic bags are used each year. Plastic bag usage
@@ -209,8 +209,8 @@
         <p>
             The NEST was an idea that the MIS Department Chair came up with to try and build a sense of community/belonging for incoming MIS majors since classes
             were moved online due to COVID. One of my professors reached out to me over the summer with the opportunity of being a "NEST Leader" where myself and
-            one other NEST Leader would be in charge providing social, community, and academic support to a group of about 10 freshmen MIS majors. I came up with 
-            ideas for activies to get students engaged and socializing with one another, provided tutoring as well as mentoring as they navigated their first semester
+            one other NEST Leader would be in charge providing social, community, and academic support to a group of about 10 freshmen MIS majors. I came up with activies 
+            to get students engaged and socializing with one another, provided tutoring as well as mentoring as they navigated their first semester
             of university.
         </p>
         <br/>
