--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@
             <span class="job">
                 <strong>Associate Business Systems Analyst Intern </strong>- <a target="_blank" href="http://www.tmhcc.com/en-us/">Tokio Marine HCC</a><br/>
             </span>
-            <span class="date"> July - August 2020</span>
+            <span class="date"> July 2020 - Present</span>
         </p>
         <input type="checkbox" class="read-more-state" id="post-1" />
         <p class='read-more-wrap'>
