--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             width=300 id="profile">
             <a href="mailto: agugger@udel.edu"><img src="mail_icon.png" alt="Mail icon image that links to Andrew Gugger's email."
             width=50 id="mailicon"></a>
-            <a target ="_blank" href="https://www.linkedin.com/in/andrew-gugger-8391a8190/"><img src="linked.png" alt="Linkedin icon image that links to Andrew Gugger's linkedin profile."
+            <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><img src="linked.png" alt="Linkedin icon image that links to Andrew Gugger's linkedin profile."
             width=50 id="linkedinicon"></a>
         </div> 
         <div class="animation">
@@ -80,7 +80,7 @@
         </h2>
             <p>
                 Hi, my name is Andrew Gugger and I am a junior at the <a target="_blank" href="https://lerner.udel.edu"><strong>University of Delaware's Alfred
-                Lerner College of Business and Economics</strong></a>, pursuing a Bachelor of Scienece in Management Information Systems and a Minor in Business 
+                Lerner College of Business and Economics</strong></a>, pursuing a Bachelor of Science in Management Information Systems and a Minor in Business 
                 Analytics. During my internship this summer I taught myself HTML and CSS and built this website in the process. I look forward to exploring the many 
                 facets of IT and have interests in DBM design, data mining, and cybersecurity. I honed my positive work ethic while working on construction sites in Switzerland, and being on a collegiate rowing team as well as 
                 racing internationally has taught me the importance of teamwork. <a href="about.html"> <strong>Click here to learn more about me.</strong></a>
