updated css to fix margins

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="upper" id="upper-lim">
         <div class="me">
             <img src="profile7.jpg" alt="A profile pciture of Andrew Gugger."
-            width=300 id="profile">
+             id="profile">
             <a href="mailto: agugger@udel.edu"><img src="mail_icon.png" alt="Mail icon image that links to Andrew Gugger's email."
             width=50 id="mailicon"></a>
             <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><img src="linked.png" alt="Linkedin icon image that links to Andrew Gugger's linkedin profile."
