--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </h2>
             <p>
                 Hi, my name is Andrew Gugger and I am a junior at the <a target="_blank" href="https://lerner.udel.edu"><strong>University of Delaware's Alfred
-                Lerner College of Business and Economics</strong></a>, pursuing a Bachelor of Science in Management Information Systems and a Minor in Business 
+                Lerner College of Business and Economics</strong></a>, pursuing a Bachelor of Science in Management Information Systems and am Minoring in Computer Science and Business 
                 Analytics. During my internship this summer I taught myself HTML and CSS and built this website in the process. I look forward to exploring the many 
                 facets of IT and have interests in DBM design, data mining, and cybersecurity. I honed my positive work ethic while working on construction sites in Switzerland, and being on a collegiate rowing team as well as 
                 racing internationally has taught me the importance of teamwork. <a href="about.html"> <strong>Click here to learn more about me.</strong></a>
