--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
             </h2>
         </span>
         <div class="nyr">
-            <a target="_blank" href="https://www.newyorkrelic.com/"><img src="NYR.png" alt="Andrew Gugger's New York Relic Project"></a>
+            <a target="_blank" href="https://bafybeiem7f55i2h42ljd3bm62ypqg2abuh5gc2hfypvzc5hfkts5bnsrpy.ipfs.dweb.link/"><img src="NYR.png" alt="Andrew Gugger's New York Relic Project"></a>
         </div>
         <br/>
         <p class = 'project_description'>
             On March 1, 2020, a new bag waste reduction law took effect in New York State - where over 23 billion plastic bags are used each year. Plastic bag usage
             affects both our communities and environment. They can be seen stuck in trees, as litter in our neighborhoods, and floating in our waterways. My brothers
-            and I started <a target="_blank" href="https://www.newyorkrelic.com/"><strong>New York Relic</strong></a> in the wake of the ban with the mission to provide reusable carry bags inspired by the iconic designs found on the plastic 
+            and I started <a target="_blank" href="https://bafybeiem7f55i2h42ljd3bm62ypqg2abuh5gc2hfypvzc5hfkts5bnsrpy.ipfs.dweb.link/"><strong>New York Relic</strong></a> in the wake of the ban with the mission to provide reusable carry bags inspired by the iconic designs found on the plastic 
             bags of New York. On top of pursuing my degree and rowing, we have been working around the clock fulfilling orders, creating designs, and utilizing social
             media for guerilla marketing.
         </p>
