--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@
         
         <p>
             <span class="job">
-                <strong>Associate Business Systems Analyst Intern </strong>- <a target="_blank" href="http://www.tmhcc.com/en-us/">Tokio Marine HCC</a><br/>
+                <strong>IT Project Assistant Intern </strong>- <a target="_blank" href="http://www.tmhcc.com/en-us/">Tokio Marine HCC</a><br/>
             </span>
             <span class="date"> July 2020 - Present</span>
         </p>
