--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         Welcome to my website!
         </h2>
             <p>
-                Hi, my name is Andrew Gugger and I am a junior at the <a target="_blank" href="https://lerner.udel.edu"><strong>University of Delaware's Alfred
+                Hi, my name is Andrew Gugger and I am a senior at the <a target="_blank" href="https://lerner.udel.edu"><strong>University of Delaware's Alfred
                 Lerner College of Business and Economics</strong></a>, pursuing a Bachelor of Science in Management Information Systems and am Minoring in Computer Science and Business 
                 Analytics. During my internship last summer I taught myself HTML and CSS and built this website in the process. I look forward to exploring the many 
                 facets of IT and have interests in DBM design, data mining, and cybersecurity. I honed my positive work ethic while working on construction sites in Switzerland, and being on a collegiate rowing team as well as 
