major update to about page and blog
finished blog post (sort of) and made drastic change to about page. Uploaded memes to blog and art to about page and got rid of most of the content on the about page. Now that I have work experience I don't need to talk about extracurriculars so much lol

--- a/resume.html
+++ b/resume.html
@@ -24,6 +24,7 @@
             <div class="space">
                 <div class="not-active">
                     <a href="index.html">HOME</a>
+                    <a href="blog.html">BLOG</a>
                     <!--<a href="contact.html">CONTACT</a> -->
                 </div>
                 <a class="active" href="resume.html">RESUME</a>
