--- a/log4j.html
+++ b/log4j.html
@@ -98,7 +98,7 @@
         </p>
         
         <div>
-            <img src="meme1.jpg" alt="log4j image meme"id=meme>
+            <img src="meme1.JPG" alt="log4j image meme"id=meme>
         </div>
 
         <p class = 'project_description'></p>
@@ -112,13 +112,13 @@
         </p>
 
         <div>
-            <img src="meme2.png" alt="log4j image meme" id=meme>
+            <img src="meme2.PNG" alt="log4j image meme" id=meme>
         </div>
 
  
 
         <div>
-            <img src="meme4.jpg" alt="log4j image meme"id=meme>
+            <img src="meme4.JPG" alt="log4j image meme"id=meme>
         </div>
         
     </div>
