hyperlink blog title and highlight title blog on hover

--- a/blog.html
+++ b/blog.html
@@ -50,9 +50,11 @@
     
     <div class="projects" id="projects">
         <span class="titles">
-            <h2>
-                {jndi:ldap://192.168.1.1:8080/}
-            </h2>
+            <div class = 'project_description'>
+                <h2>
+                    <a href="log4j.html">{jndi:ldap://192.168.1.1:8080/}</a>
+                </h2>
+            </div>
         </span>
         <span class="titles">
             <h3>
