change blog title
not actually my ip obviously but changed to to be more reader friendly

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
         <span class="titles">
             <div class = 'project_description'>
                 <h2>
-                    <a href="log4j.html">{jndi:ldap://192.168.1.1:8080/}</a>
+                    <a href="log4j.html">{jndi:ldap://ip/exploit:port/}</a>
                 </h2>
             </div>
         </span>
