about and blog edits
about title change and hopefully change device width scaling on blog page

--- a/about.html
+++ b/about.html
@@ -8,6 +8,10 @@
     <meta name="keyword" content="Andrew Gugger, resume, rowing, greenwich, University of Delaware">
     
     <link rel="stylesheet" href="style.css">
+
+    <title>
+        About
+    </title>
    
     
 
