added link to github

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             width=50 id="mailicon"></a>
             <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><img src="linked.png" alt="Linkedin icon image that links to Andrew Gugger's linkedin profile."
             width=50 id="linkedinicon"></a>
+            <a target ="_blank" href="https://github.com/andrewgugger"><img src="git.png" alt="Github icon that links to Andrew Gugger's Github."
+                width=40 id="giticon"></a>
         </div> 
         <div class="animation">
             <div class="list">
