change dir for images

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
     <div class ="hi">
         <div class="pic">
-            <img src="marathon.JPG"
+            <img src="images/marathon.JPG"
              alt="A photo of Andrew Gugger running the Philadelphia Marathon" width=400 id="marathon"/>
         </div>
 
@@ -77,25 +77,25 @@
         </p>
     </div>
 
-    <img src="swiss-eight.jpg"
+    <img src="images/swiss-eight.jpg"
     alt="A photo of Andrew Gugger rowing in an eight in Switzerland with Ruder Club Schaffhausen." width=900px id="eight"/>
     <br/>
     <div class="class-work">
         <p>Aside from rowing and school I also enjoy motorcycling and am an amateur botanist!</p>
     </div>
-    <img src="botany.jpg"
+    <img src="images/botany.jpg"
     alt="A photo of Andrew Gugger's plants." width=900px id="botany"/>
 
-    <img src="motorcycle.jpg"
+    <img src="images/motorcycle.jpg"
     alt="A photo of Andrew Gugger and his motorcycle." width=900px id="motorcycle"/>
 
-    <img src="two2.png"
+    <img src="images/two2.png"
     alt="Python processing art." width=900px id="botany"/>
 
-    <img src="pink.png"
+    <img src="images/pink.png"
     alt="Python processing art." width=900px id="botany"/>
 
-    <img src="green.png"
+    <img src="images/green.png"
     alt="Python processing art." width=900px id="botany"/>
 
 
