--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
        
     <div class="upper" id="upper-lim">
         <div class="me">
-            <img src="profile7.jpg" alt="A profile pciture of Andrew Gugger."
+            <img src="images/profile7.jpg" alt="A profile pciture of Andrew Gugger."
              id="profile">
-            <a href="mailto: agugger@udel.edu"><img src="mail_icon.png" alt="Mail icon image that links to Andrew Gugger's email."
+            <a href="mailto: agugger@udel.edu"><img src="images/mail_icon.png" alt="Mail icon image that links to Andrew Gugger's email."
             width=50 id="mailicon"></a>
-            <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><img src="linked.png" alt="Linkedin icon image that links to Andrew Gugger's linkedin profile."
+            <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><img src="images/linked.png" alt="Linkedin icon image that links to Andrew Gugger's linkedin profile."
             width=50 id="linkedinicon"></a>
-            <a target ="_blank" href="https://github.com/andrewgugger"><img src="git.png" alt="Github icon that links to Andrew Gugger's Github."
+            <a target ="_blank" href="https://github.com/andrewgugger"><img src="images/git.png" alt="Github icon that links to Andrew Gugger's Github."
             width=40 id="giticon"></a>
         </div> 
         <div class="animation">
@@ -86,7 +86,7 @@
             </h2>
         </span>
         <div class="nyr">
-            <a target="_blank" href="https://www.sloppy2nd.com/"><img src="sloppy.jpg" alt="The Sloppy2nd Website"></a>
+            <a target="_blank" href="https://www.sloppy2nd.com/"><img src="images/sloppy.jpg" alt="The Sloppy2nd Website"></a>
         </div>
         <br/>
         <p class = 'project_description'>
@@ -102,7 +102,7 @@
             or reach out to me on <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><strong>linkedin</strong></a>.
         </p>
         <div class="nyr">
-            <a target="_blank" href="https://bafybeiem7f55i2h42ljd3bm62ypqg2abuh5gc2hfypvzc5hfkts5bnsrpy.ipfs.dweb.link/"><img src="NYR.png" alt="Andrew Gugger's New York Relic Project"></a>
+            <a target="_blank" href="https://bafybeiem7f55i2h42ljd3bm62ypqg2abuh5gc2hfypvzc5hfkts5bnsrpy.ipfs.dweb.link/"><img src="images/NYR.png" alt="Andrew Gugger's New York Relic Project"></a>
         </div>
         <br/>
         <p class = 'project_description'>
