--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
     <div class ="hi">
         <div class="pic">
-            <img src="images/marathon.JPG"
+            <img src="images/marathon.jpg"
              alt="A photo of Andrew Gugger running the Philadelphia Marathon" width=400 id="marathon"/>
         </div>
 
