update moon images

--- a/about.html
+++ b/about.html
@@ -70,7 +70,8 @@
     <div class="class-work">
         <p>
             When I am not studying or programming I enjoy snowboarding, running, and hiking. Most recently I have started creating art with python using
-            <strong><a target="_blank" href="https://processing.org/"> Processing</a></strong>. Check out some of the art I generated below!
+            <strong><a target="_blank" href="https://processing.org/"> Processing</a></strong>. Check out some of the art I generated below! I have also 
+            been getting into astrophotography.
             <br/>
             <br/>
             
@@ -97,6 +98,12 @@
 
     <img src="images/green.png"
     alt="Python processing art." width=900px id="botany"/>
+
+    <img src="images/moon/day.jpg"
+    alt="Astrophotography image of moon taken during the day." width=900px id="botany"/>
+
+    <img src="images/moon/a_night.jpg"
+    alt="Astrophotography image of moon taken at night." width=900px id="botany"/>
 
 
     
