--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
         <br/>
         <h3>PGP Keys</h3>
     </br>
-        <pre>
-            -----BEGIN PGP PUBLIC KEY BLOCK-----
+<pre>
+    <code>
+        -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQGNBGKwEQ4BDAD7Sv35cEDhmzbKvW3+oDj/wJlzuorAvAuA+8KyxJR0u2rpuf6i
 8au2xgVBgZCpqhRSXExEFCJd8zkbwwEHR95gmnZgVZxzfXkUit2LkOQ18+89x6P7
@@ -159,7 +160,8 @@ ydwZDnLGEIy6JmfPYvbQBUr0ThTmCrUTvz2nTK7woklen1eUBlAye5PvxJShMFH2
 tQdDtvU=
 =DHQI
 -----END PGP PUBLIC KEY BLOCK-----
-        </pre>
+    </code>
+</pre>
     </div>
 
 
