added text for pgp key

--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
         </p>   
         <br/>
         <br/>
-        <h3>PGP Keys</h3>
+        <h3>PGP Public Key</h3>
+    </br>
+        <p class = 'project_description'>
+            Send me an encrypted message with my PGP public key below!
+        </p>
     </br>
 <pre>
     <code>
