blog image width

--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
             </h3>
         </span>
         <div class="nyr">
-            <a href="log4j.html"><img src="images/log.jpg" alt="log4j image"></a>
+            <a href="log4j.html"><img src="images/log.jpg" width=900px alt="log4j image"></a>
         </div>
         <br/>
         <p class = 'project_description'>
